--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,8 @@ Depends:
 License: GPL (>= 2)
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 5.0.1
-Suggests: knitr, rmarkdown
+RoxygenNote: 5.0.1.9000
+Suggests:
+    knitr,
+    rmarkdown
 VignetteBuilder: knitr
