warnng if column seqdepth = 0. use of data.table for faster merging.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: SCnorm
 Title: Normalization of single cell RNA-seq data
-Version: 1.1.0
+Version: 1.1.1
 Authors: Rhonda Bacher, email = rbacher@wisc.com
 Description: Normalization of single cell RNA-seq data
 Depends:
@@ -9,6 +9,7 @@ Depends:
     quantreg,
     cluster,
     moments,
+    data.table,
     reshape2
 License: GPL (>= 2)
 Encoding: UTF-8
