updates for BioC-use SummarizedExperiment and BioCparallel, add useZerosToScale option

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,13 +3,25 @@
 export(GetSlopes)
 export(SCnorm)
 export(checkCountDepth)
+export(checkWithinFactor)
+export(getCounts)
+export(getResults)
+import(ggplot2)
 import(grDevices)
 import(graphics)
 import(stats)
+importFrom(BiocParallel,MulticoreParam)
+importFrom(BiocParallel,bplapply)
+importFrom(BiocParallel,bpparam)
+importFrom(BiocParallel,register)
+importFrom(S4Vectors,metadata)
+importFrom(SummarizedExperiment,SummarizedExperiment)
+importFrom(SummarizedExperiment,assayNames)
+importFrom(SummarizedExperiment,assays)
+importFrom(SummarizedExperiment,colData)
 importFrom(cluster,clara)
 importFrom(data.table,data.table)
-importFrom(grDevices,colorRampPalette)
+importFrom(data.table,melt)
 importFrom(moments,skewness)
 importFrom(parallel,detectCores)
-importFrom(parallel,mclapply)
 importFrom(quantreg,rq)
