--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: SCnorm
 Title: Normalization of single cell RNA-seq data
-Version: 0.99.3
+Version: 0.99.4
 Author: Rhonda Bacher
 Maintainer: Rhonda Bacher <rbacher@wisc.edu>
-Description: This package implements, SCnorm, a method to normalize single-cell
+Description: This package implements SCnorm — a method to normalize single-cell
 	RNA-seq data.
 Depends:
 	R (>= 3.4.0),
@@ -15,7 +15,12 @@ Imports:
 	quantreg,
 	cluster,
 	moments,
-	data.table
+	data.table,
+	BiocParallel,
+	SummarizedExperiment,
+	S4Vectors,
+	ggplot2,
+	forcats
 License: GPL (>= 2)
 Encoding: UTF-8
 LazyData: true
