--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ importFrom(SummarizedExperiment,colData)
 importFrom(cluster,clara)
 importFrom(data.table,data.table)
 importFrom(data.table,melt)
+importFrom(methods,is)
 importFrom(moments,skewness)
 importFrom(parallel,detectCores)
 importFrom(quantreg,rq)
