--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,10 +10,6 @@ import(ggplot2)
 import(grDevices)
 import(graphics)
 import(stats)
-importFrom(BiocParallel,MulticoreParam)
-importFrom(BiocParallel,bplapply)
-importFrom(BiocParallel,bpparam)
-importFrom(BiocParallel,register)
 importFrom(S4Vectors,metadata)
 importFrom(SummarizedExperiment,SummarizedExperiment)
 importFrom(SummarizedExperiment,assayNames)
@@ -22,6 +18,8 @@ importFrom(SummarizedExperiment,colData)
 importFrom(cluster,clara)
 importFrom(data.table,data.table)
 importFrom(data.table,melt)
+importFrom(methods,is)
 importFrom(moments,skewness)
 importFrom(parallel,detectCores)
+importFrom(parallel,mclapply)
 importFrom(quantreg,rq)
