add warning for FilterCellNum, import dither

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,4 +25,5 @@ importFrom(data.table,melt)
 importFrom(methods,is)
 importFrom(moments,skewness)
 importFrom(parallel,detectCores)
+importFrom(quantreg,dither)
 importFrom(quantreg,rq)
