--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: SCnorm
 Title: Normalization of single cell RNA-seq data
 Version: 1.3.0
 Author: Rhonda Bacher
-Maintainer: Rhonda Bacher <rbacher@wisc.edu>
+Maintainer: Rhonda Bacher <rbacher@ufl.edu>
 Description: This package implements SCnorm — a method to normalize
         single-cell RNA-seq data.
 Depends: R (>= 3.4.0),
