update SCnorm to use SingleCellExperiment

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(getSlopes)
 export(plotCountDepth)
 export(plotWithinFactor)
 export(results)
+import(SingleCellExperiment)
 import(ggplot2)
 import(grDevices)
 import(graphics)
@@ -22,6 +23,7 @@ importFrom(SummarizedExperiment,colData)
 importFrom(cluster,clara)
 importFrom(data.table,data.table)
 importFrom(data.table,melt)
+importFrom(methods,as)
 importFrom(methods,is)
 importFrom(moments,skewness)
 importFrom(parallel,detectCores)
