allow separate norm then scaling

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ export(getSlopes)
 export(plotCountDepth)
 export(plotWithinFactor)
 export(results)
-import(SingleCellExperiment)
+export(scaleNormMultCont)
 import(ggplot2)
 import(grDevices)
 import(graphics)
@@ -16,6 +16,10 @@ importFrom(BiocParallel,bplapply)
 importFrom(BiocParallel,bpparam)
 importFrom(BiocParallel,register)
 importFrom(S4Vectors,metadata)
+importFrom(SingleCellExperiment,SingleCellExperiment)
+importFrom(SingleCellExperiment,counts)
+importFrom(SingleCellExperiment,isSpike)
+importFrom(SingleCellExperiment,normcounts)
 importFrom(SummarizedExperiment,SummarizedExperiment)
 importFrom(SummarizedExperiment,assayNames)
 importFrom(SummarizedExperiment,assays)
