fix import statement on sce

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,7 +17,6 @@ importFrom(BiocParallel,bpparam)
 importFrom(BiocParallel,register)
 importFrom(S4Vectors,metadata)
 importFrom(SingleCellExperiment,SingleCellExperiment)
-importFrom(SingleCellExperiment,counts)
 importFrom(SingleCellExperiment,isSpike)
 importFrom(SingleCellExperiment,normcounts)
 importFrom(SummarizedExperiment,SummarizedExperiment)
@@ -33,3 +32,4 @@ importFrom(moments,skewness)
 importFrom(parallel,detectCores)
 importFrom(quantreg,dither)
 importFrom(quantreg,rq)
+importMethodsFrom(SingleCellExperiment,counts)
