fix import statements

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,22 +7,21 @@ export(plotCountDepth)
 export(plotWithinFactor)
 export(results)
 export(scaleNormMultCont)
+import(SingleCellExperiment)
+import(SummarizedExperiment)
 import(ggplot2)
 import(grDevices)
 import(graphics)
-import(stats)
+import(stats, except = c(start, weights, end))
+importFrom(BiocGenerics,counts)
 importFrom(BiocParallel,MulticoreParam)
 importFrom(BiocParallel,bplapply)
 importFrom(BiocParallel,bpparam)
 importFrom(BiocParallel,register)
 importFrom(S4Vectors,metadata)
-importFrom(SingleCellExperiment,SingleCellExperiment)
 importFrom(SingleCellExperiment,isSpike)
 importFrom(SingleCellExperiment,normcounts)
-importFrom(SummarizedExperiment,SummarizedExperiment)
-importFrom(SummarizedExperiment,assayNames)
 importFrom(SummarizedExperiment,assays)
-importFrom(SummarizedExperiment,colData)
 importFrom(cluster,clara)
 importFrom(data.table,data.table)
 importFrom(data.table,melt)
@@ -32,4 +31,3 @@ importFrom(moments,skewness)
 importFrom(parallel,detectCores)
 importFrom(quantreg,dither)
 importFrom(quantreg,rq)
-importMethodsFrom(SingleCellExperiment,counts)
