--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,15 @@
 Package: SCnorm
 Title: Normalization of single cell RNA-seq data
-Version: 1.8.1
+Version: 1.8.2
 Author: Rhonda Bacher
 Maintainer: Rhonda Bacher <rbacher@ufl.edu>
 Description: This package implements SCnorm — a method to normalize
         single-cell RNA-seq data.
 Depends: R (>= 3.4.0),
-Imports: stats, methods, graphics, grDevices, parallel, quantreg,
-        cluster, moments, data.table, BiocParallel, SingleCellExperiment,
-        SummarizedExperiment, S4Vectors, ggplot2, forcats
+Imports: SingleCellExperiment, SummarizedExperiment, stats, methods, 
+	graphics, grDevices, parallel, quantreg, cluster, 
+	moments, data.table, BiocParallel, S4Vectors, ggplot2, forcats,
+	BiocGenerics
 License: GPL (>= 2)
 Encoding: UTF-8
 LazyData: true
